# tonic-actix-demo

./: Cargo.toml  README.md  build.rs
src/: actor.rs  grpc.rs  main.rs
