[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9"
tonic = "0.10.2"
tonic-reflection = "0.10.2"
tokio = { version = "1.0", features = ["rt", "macros"] }
prost = "0.12"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
